GNOME Bugzilla – Bug 753951
Don't destroy attached menus
Last modified: 2015-08-22 05:21:48 UTC
The documentation for gtk_menu_attach_to_widget states that attached menus are destroyed together with their attach_widget, like child widgets. Destroying them manually leads to bad things, such as segfaults.
Created attachment 309848 [details] [review] Don't destroy attached menus
patch pushed to master, thank you.