Don't destroy attached menus

The documentation for gtk_menu_attach_to_widget states that
attached menus are destroyed together with their attach_widget,
like child widgets. Destroying them manually leads to bad things,
such as segfaults.

https://bugzilla.gnome.org/show_bug.cgi?id=753951